manifests/name-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name
  namespace: greeter-app
  labels:
    app: name
spec:
  replicas: 3 # should match minReplicas in manifests/app-a/hpa.yaml
  selector:
    matchLabels:
      app: name
  template:
    metadata:
      labels:
        app: name
    spec:
      containers:
      - name: name
        image: juanroldan1989/name:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
