manifests/name-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: name
  namespace: greeter-app
spec:
  selector:
    app: name
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
