manifests/name-app/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: name-ingress-policy
  namespace: greeter-app
spec:
  podSelector:
    matchLabels:
      app: name
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: greeter
